groups-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groups-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: groups
  template:
    metadata:
      labels:
        app: groups
    spec:
      containers:
        - name: groups
          image: ghcr.io/kstacks-org/groups-service:master-a1f34fe
          ports:
            - containerPort: 6598
          resources:
            requests:
              cpu: 250m
              memory: 448Mi
            limits:
              cpu: 500m
              memory: 576Mi
          livenessProbe:
            httpGet:
              path: /groups/actuator/health/liveness
              port: 6598
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /groups/actuator/health/readiness
              port: 6598
            initialDelaySeconds: 10
            periodSeconds: 5
