groups-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: groups-service
spec:
  selector:
    app: groups
  ports:
    - port: 80
      targetPort: 6598
  type: ClusterIP      # internal only
