groups-service/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: groups-route
  namespace: default
spec:
  parentRefs:
    - name: kstacks-gateway
  hostnames:
    - "api.kstacks.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /groups
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: api-cors
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: jwt-auth
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: cookie-to-bearer
      backendRefs:
        - name: groups-service
          port: 80
